# HomeControl_IOT

./: README.md
ESP/Espressif with FreeRTOS/: main.cpp
ESP/Simplified/: IOT.ino
GUI/Executable/.qt/deploy_qml_imports/: appTCP.cmake
GUI/Executable/.qt_plugins/: Qt6_QmlPlugins_Imports_appTCP.cmake
GUI/Executable/.qtc_clangd/: compile_commands.json
GUI/Executable/.rcc/: qmake_TCP.qrc  qrc_appTCP_raw_qml_0.cpp  qrc_qmake_TCP.cpp
GUI/Executable/.rcc/qmlcache/: appTCP_qml_loader_file_list.rsp
GUI/Executable/meta_types/: appTCP_json_file_list.txt
GUI/Project and CMake/: main.cpp
GUI/Simplified/Executable/: CMakeCache.txt  apptcp_qmltyperegistrations.cpp  build.ninja
GUI/Simplified/Executable/.qt/: QtDeploySupport.cmake
GUI/Simplified/Executable/.qt_plugins/: Qt6_QmlPlugins_Imports_appTCP.rsp
GUI/Simplified/Executable/.rcc/qmllint/: appTCP.rsp  (+1 more)
GUI/Simplified/Executable/TCP/: appTCP_qml_module_dir_map.qrc  qmldir
GUI/Simplified/Executable/meta_types/: qt6apptcp_debug_metatypes.json
GUI/Simplified/Project and CMake/: CMakeLists.txt  CommunicationController.h
GUI/Source/Backend/: CommunicationController.cpp
GUI/Thread Supported/Executable/: .ninja_deps  .ninja_log  cmake_install.cmake
GUI/Thread Supported/Executable/.rcc/: appTCP_raw_qml_0.qrc
GUI/Thread Supported/Executable/appTCP_autogen/: deps  mocs_compilation.cpp
GUI/Thread Supported/Executable/meta_types/: appTCP_json_file_list.txt.timestamp
GUI/Thread Supported/Project and CMake/: CommunicationController.cpp  main.cpp  main.qml
GUI/Thread Supported/Source/Backend/: CommunicationController.h
(+32 files in other folders)
